// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/New Block Active State 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 12px 32px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #132144;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Blue 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(197,231,246,0.8),#c5e7f6);
  box-shadow: 0 0 0 1.3px #2a94d450;
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px #2a94d450,0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #0f7ec0;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Disabled State 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
  opacity: 0.7;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Green 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(229,238,229,0.8),#e5eee5);
  box-shadow: 0 0 0 1.3px #68906850;
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px #68906850 ,0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #6b7a6b;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Long Name 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Purple 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(232,222,238,0.8),#e8deee);
  box-shadow: 0 0 0 1.3px #9888a250;
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px #9888a250,0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #765e84;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Red 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(255,216,226,0.8),#ffd8e2);
  box-shadow: 0 0 0 1.3px #b88b9750;
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px #b88b9750,0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #a84862;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Regular State 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Selected State 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
  border-color: #5d9df5;
  box-shadow: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #132144;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Standard 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block State Transitions 1`] = `
.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Sub Sections 1`] = `
.c9 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c9 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c10 .c8 {
  color: #fff;
}

.c11 .c8 {
  color: #6e849a;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
  padding: 0 42px;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c7 {
  position: absolute;
  left: 0;
  padding: 0 5px;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
  <div
    className="c1"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <span
          className="c8 c9"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Section1"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Section1
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
    </section>
  </div>
  <div
    className="c1"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <span
          className="c8 c9"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Section2 Blah blah blah blah blah"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Section2 Blah blah blah blah blah
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
    </section>
  </div>
</div>
`;
